2012-01-06  Albert Chu <chu11@llnl.gov>

	* Update/fix various documentation and comments.
	
2012-01-05  Albert Chu <chu11@llnl.gov>

	Merge 8269:8289 from c410x branch. 

	* ipmi-oem/: Support Dell C410x OEM extension slot-power-toggle,
	slot-power-control, get-port-map, and set-port-map.
	
2011-12-22  Albert Chu <chu11@llnl.gov>

	* libfreeipmi/include/freeipmi/spec/ipmi-system-info-parameters-oem-spec.h: Fix macro names.
	
2011-12-22  Albert Chu <chu11@llnl.gov>

	Merge branch qsscs4r.
 
	* libfreeipmi/sel-parse/, libfreeipmi/interpret/: Support Quanta
	QSSC-S4R/Appro GB812X-CN OEM SEL Events.

	* libfreeipmi/interpret/, ipmi-sensors/: Re-organize code for
	future growth.  Most notably, split up OEM extensions into
	individual vendor files/functions.

	* ipmi-sensors/: Support Quanta QSSC-S4R OEM SDR records.

	* libfreeipmi/interpret/: Support Fan assert/deassert sensor/sel
	interpretations.  Support Quanta QSSC-S4R OEM sensors and SEL
	events.
	
2011-12-21  Albert Chu <chu11@llnl.gov>

	* Update/fix/remove OEM extension download links
	
2011-12-20  Albert Chu <chu11@llnl.gov>

	* libfreeipmi/util/ipmi-sensor-and-event-code-tables-util.c (ipmi_get_oem_specific_message):
	Fix bug loading incorrect tables.

	* libfreeipmi/sel-parse/ipmi-sel-parse-string-intel.c (ipmi_sel_parse_output_intel_event_data2_event_data),
	libfreeipmi/include/freeipmi/spec/ipmi-slave-address-oem-spec.h:
	Remove IPMI_GENERATOR_ID_OEM_INTEL_BIOS_POST macro, which was only
	supposed to be an example in Intel documentation.
	
2011-12-20  Albert Chu <chu11@llnl.gov>

	* Branch Release-1_1_0_branch for FreeIPMI 1.1.0 stable branch 
	
2011-12-20  Albert Chu <chu11@llnl.gov>

	* Update documentation for Quanta QSSC-S4R/Appro GB812X-CN

2011-12-19  Albert Chu <chu11@llnl.gov>

	* libfreeipmi/fru-parse/: Support IPMI_FRU_PARSE_ERR_DEVICE_BUSY error code.

	* ipmi-fru/: Do not consider a busy device a fatal error.

	* Document Appro GB812X-CN IPMI compliance issues.
