@@ -22,6 +22,7 @@ Dan Lukes <dan+freeipmi@obluda.cz>
 Arnaud Quette <arnaud.quette@free.fr>
 Diego Elio Pettenò <flameeyes@flameeyes.eu>
 Kaiwang Chen <kaiwang.chen@gmail.com>
+Jan Safranek <jsafrane@redhat.com>
 And others ...
 
 Package Maintainers:
